@@ -16,6 +16,7 @@ Revision history for DBIx::Class
           it easier to pass HashRefInflator data directly to ->populate
         - Improve freeze/thaw semantics and error messages (RT#62546)
         - Fix inconsistency in Manual::Features (RT#64500)
+        - Fix incorrect SQL when using for => 'shared' with MySQL (RT#64590)
 
     * Misc
         - Fix test warning on win32 - at this point the test suite is
